--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -66,16 +66,33 @@ jobs:
 
     # Build job for Windows
     build-windows:
-        name: Windows Server 2019 MinGW Debug
-        runs-on: windows-2019
+        strategy:
+            fail-fast: false
+            matrix:
+                include:
+                    - name: Windows Server 2019 MinGW Debug
+                      image: windows-2019
+                      shell: msys2 {0}
+                      build-type: Debug
+                      experimental: false
+                    - name: Windows Server 2019 MSVC Debug
+                      image: windows-2019
+                      shell: cmd
+                      cmake-args: -G "Visual Studio 16 2019" "-DSDL2_PATH=sdl2\" "-DSDL2_LIBRARY=sdl2\lib\x64\SDL2.lib" "-DSDL2_INCLUDE_DIR=sdl2\" "-DSDL2_DLL_LOCATION_DIR=sdl2\lib\x64\SDL2.dll"
+                      build-type: Debug
+                      experimental: true
+        name: ${{ matrix.name }} ${{ matrix.build-type }}
+        runs-on: ${{ matrix.image }}
+        continue-on-error: ${{ matrix.experimental }}
         defaults:
             run:
-                shell: msys2 {0}
+                shell:  ${{ matrix.shell }}
 
         steps:
             - uses: actions/checkout@v3
 
-            - name: Install Dependencies
+            - name: Install Dependencies (msys2)
+              if: startsWith(matrix.shell, 'msys2')
               uses: msys2/setup-msys2@v2
               with:
                   install: >-
@@ -84,11 +101,29 @@ jobs:
                   msystem: mingw64
                   release: false
             #mingw-w64-x86_64-SDL2 not installed above because of: https://github.com/AntiMicroX/antimicrox/issues/465
-            - name: Install sdl2
+            - name: Install sdl2 (mingw-w64)
+              if: startsWith(matrix.shell, 'msys2')
               run: |
                 curl -L -o mingw-w64-x86_64-SDL2-2.0.20-1-any.pkg.tar.zst https://mirror.msys2.org/mingw/mingw64/mingw-w64-x86_64-SDL2-2.0.20-1-any.pkg.tar.zst
                 pacman --noconfirm -U mingw-w64-x86_64-SDL2-2.0.20-1-any.pkg.tar.zst
-
+            
+            - name: Install Dependencies (msvc)
+              if: startsWith(matrix.shell, 'cmd')
+              run: |
+                curl -L -o SDL2-devel-2.0.20-VC.zip https://github.com/libsdl-org/SDL/releases/download/release-2.0.20/SDL2-devel-2.0.20-VC.zip
+                unzip SDL2-devel-2.0.20-VC.zip
+                mv "${{ github.workspace }}/SDL2-2.0.20" "${{ github.workspace }}/sdl2"
+                mklink /J "${{ github.workspace }}\sdl2\include" "${{ github.workspace }}\sdl2\SDL2"
+                
+            #- name: Add msbuild to PATH
+            #  if: startsWith(matrix.shell, 'cmd')
+            #  uses: microsoft/setup-msbuild@v1.1
+            - name: Install MSVC
+              if: startsWith(matrix.shell, 'cmd')
+              uses: TheMrMilchmann/setup-msvc-dev@v2
+              with:
+                arch: x64
+                toolset: 14.1
 
             - name: Install Qt
               uses: jurplel/install-qt-action@v2
@@ -99,11 +134,11 @@ jobs:
                   arch: "win64_mingw81"
                   dir: "${{ github.workspace }}/qt/"
                   install-deps: "true"
-
+              
             - name: Configure CMake
-              run: cmake -DCMAKE_BUILD_TYPE=Debug -B '${{ github.workspace }}'/build
+              run: cmake -DCMAKE_BUILD_TYPE=${{ matrix.build-type }} -B '${{ github.workspace }}'/build ${{ matrix.cmake-args }}
               env:
                   CMAKE_PREFIX_PATH: ${{ env.Qt5_Dir }}
-
+              
             - name: Build
               run: cmake --build '${{ github.workspace }}'/build --parallel 8
