--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -81,9 +81,9 @@ jobs:
                   install-deps: "true"
               
             - name: Configure CMake
-              run: cmake -DCMAKE_BUILD_TYPE=${{ matrix.build-type }} -B '${{ github.workspace }}/build' ${{ matrix.cmake-args }}
+              run: cmake -DCMAKE_BUILD_TYPE=${{ matrix.build-type }} -B "${{ github.workspace }}/build" ${{ matrix.cmake-args }}
               env:
                   CMAKE_PREFIX_PATH: ${{ env.Qt5_Dir }}
               
             - name: Build
-              run: cmake --build '${{ github.workspace }}/build' --parallel 8
+              run: cmake --build "${{ github.workspace }}/build" --parallel 8
