--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,7 +23,7 @@ jobs:
                     - name: Windows Server 2019 MSVC Debug
                       image: windows-2019
                       shell: cmd
-                      cmake-args: -G "Visual Studio 16 2019" "-DSDL2_PATH=sdl2\" "-DSDL2_LIBRARY=sdl2\lib\x64\SDL2.lib" "-DSDL2_INCLUDE_DIR=sdl2\" "-DSDL2_DLL_LOCATION_DIR=sdl2\lib\x64\SDL2.dll"
+                      cmake-args: -G "Visual Studio 16 2019" "-DSDL2_PATH=${{ github.workspace }}/sdl2/" "-DSDL2_LIBRARY=${{ github.workspace }}/sdl2/lib/x64/SDL2.lib" "-DSDL2_INCLUDE_DIR=${{ github.workspace }}/sdl2/" "-DSDL2_DLL_LOCATION_DIR=${{ github.workspace }}/sdl2/lib/x64/SDL2.dll"
                       build-type: Debug
                       experimental: true
         name: ${{ matrix.name }} ${{ matrix.build-type }}
